--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -9,15 +9,37 @@
 
 {% block content %}
 
-<div class="row">
-    <div class="col-12">
-        <form method="POST" action="{% url 'add_review' product.id %}" enctype="multipart/form-data">
+<div class="row bg-light-grey">
+    <div class="col-6 offset-3 ib-form review-form bg-ib-white p-0 shadow">
+        <div class="ib-form-header bg-yellow-light d-flex justify-content-between align-items-center">
+            <div class="font-body my-2 mx-4 text-v">
+                <p class="weight-regular mb-1">Tell us your thoughts on...</p>
+                <h1 class="weight-semibold text-uppercase m-0">{{ product.name }}</h1>
+            </div>
+            <img class="" src="{{ product.image.url }}" alt="{{ product.name }}">
+        </div>
+        <form class="px-4 py-4" method="POST" action="{% url 'add_review' product.id %}" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
                 {{ field }}
             {% endfor %}
 
-            <button class="btn" type="submit">SUBMIT</button>
+            <div class="rating-form-div" aria-hidden="true">
+                <p class="font-body weight-semibold m-0">Your Rating *</p>
+                <div class="rating-div pe-0">
+                    <span class="rating-hex hex-1" data-hex="1">&#x2B22;</span>
+                    <span class="rating-hex hex-2" data-hex="2">&#x2B22;</span>
+                    <span class="rating-hex hex-3" data-hex="3">&#x2B22;</span>
+                    <span class="rating-hex hex-4" data-hex="4">&#x2B22;</span>
+                    <span class="rating-hex hex-5" data-hex="5">&#x2B22;</span>
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-end">
+                <a class="ib-button ib-button-grey me-3 text-decoration-none text-dark-grey font-title weight-bold shadow-sm" href="">CANCEL</a>
+                <button class="ib-button ib-button-yellow text-dark-grey font-title weight-bold shadow-sm" type="submit">SUBMIT</button>
+            </div>
+            
         </form>
     </div>
 </div>
@@ -26,5 +48,9 @@
 
 {% endblock %}
 
+{% block extra_js %}
+    <!-- Rating Selector JS -->
+    <script src="{% static 'js/rating_select.js' %}"></script>
+{% endblock %}
 
 
