feat: add responsive styling to add_review form

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -54,7 +54,7 @@
         
         <div class="col-12 col-md-6 col-lg-5">
             <!-- Product Name -->
-            <h1 class="product-page-name text-uppercase weight-semibold">{{ product.name }}</h1>
+            <h1 class="product-page-name text-uppercase weight-semibold text-break">{{ product.name }}</h1>
 
             <!-- Product Category -->
             <div class="product-page-category mt-1">
@@ -126,7 +126,7 @@
 <div class="container-fluid ib-container bg-light-grey text-ib-dark py-5" id="review-div">
     <div class="row text-center px-3 px-sm-5">
         <div class="col-12">
-            <h2 class="font-title weight-bold section-title mb-2 text-uppercase">REVIEWS OF {{ product.name }}</h2>
+            <h2 class="font-title weight-bold section-title mb-2 text-uppercase text-break">REVIEWS OF {{ product.name }}</h2>
         </div>
         <div class="col-12 mb-3">
             <p class="font-body">Have you bought this product? Leave a review!</p>
