--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -176,7 +176,7 @@
                     {% if request.user.is_superuser or request.user == review.user %}
                         <div class="row">
                             <div class="card-edit-delete-div mt-2 gy-3">
-                                <a href="" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
+                                <a href="{% url 'edit_review' review.id %}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
                                 <a href="" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
                             </div>
                         </div>
