--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -173,13 +173,32 @@
                     </div>
 
                     <!-- Review EDIT / DELETE Buttons -->
-
-                    <!-- NEED TO ADD MODAL FOR DELETE CHECK!!! -->
                     {% if request.user.is_superuser or request.user == review.user %}
                         <div class="row">
                             <div class="card-edit-delete-div mt-2 gy-3">
                                 <a href="{% url 'edit_review' review.id %}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
-                                <a href="{% url 'delete_review' review.id %}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
+                                <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                            </div>
+                        </div>
+
+                        <!-- Confirm Delete Modal - Defensive Programming -->
+                        <div class="modal fade" id="modal-{{ review.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header justify-content-between bg-dark-grey py-3">
+                                        <h5 class="font-body text-ib-light">DELETE REVIEW</h5>
+                                        <button type="button" class="close modal-close-cross text-ib-light" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body pb-2 font-body">
+                                        <p>Are you sure you want to the delete the review...
+                                        <strong>"{{ review.title }}"</strong></p>
+                                    </div>
+                                    <div class="modal-footer pt-0">
+                                        <button type="button" class="edit-del-btn dismiss-btn font-title text-decoration-none weight-regular align-middle me-2" data-dismiss="modal">CLOSE</button>
+                                        <a href="{% url 'delete_review' review.id %}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         
@@ -195,14 +214,10 @@
         {% endif %}
     </div>
 
-
-
-
-
-    
 </div>
 
+
+
+
 {% endblock %}
-
-
 
