fix: styling on +/- buttons on product details

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -90,7 +90,7 @@
                                 <i class="fas fa-minus"></i>
                             </button>
                         </div>
-                        <input class="form-control qty_input" type="number"
+                        <input class="form-control qty_input ib-form-field" type="number"
                             name="quantity"
                             value="1"
                             min="1"
