--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -107,13 +107,13 @@
                 </div>
             </div>
 
-            <div class="product-page-buttons my-4 pt-4">
+            <div class="product-page-buttons my-4 pt-2 pt-md-4">
                 <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
                     <i class="fas fa-chevron-left d-inline me-1"></i>
                     <p class="d-inline">KEEP SHOPPING</p>
                 </a>
 
-                <a href="{% url 'products' %}" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-3 shadow-sm">
+                <a href="{% url 'products' %}" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm">
                     ADD TO BAG
                 </a>
 
