feat: add bag app urls and template

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -107,6 +107,7 @@
                 </div>
             </div>
 
+            <!-- Product Detail Page Buttons -->
             <div class="product-page-buttons my-4 pt-2 pt-md-4">
                 <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
                     <i class="fas fa-chevron-left d-inline me-1"></i>
