--- a/templates/base.html
+++ b/templates/base.html
@@ -92,7 +92,7 @@
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a class="nav-link hex-nav-link" href="">
+                        <a class="nav-link hex-nav-link" href="{% url 'view_bag' %}">
                             <div class="text-center ms-2">
                                 <div class="icon-hex {% if grand_total %}bag-contents{% else %}bag-empty{% endif %}">
                                     <i class="fas fa-shopping-bag fa-lg text-ib-light"></i>
