--- a/templates/includes/mobile-nav-bar.html
+++ b/templates/includes/mobile-nav-bar.html
@@ -60,7 +60,7 @@
 
             <!-- Shopping Bag -->
             <li class="list-inline-item">
-                <a class="nav-link hex-nav-link" href="">
+                <a class="nav-link hex-nav-link" href="{% url 'view_bag' %}">
                     <div class="text-center ms-2">
                         <div
                             class="icon-hex {% if grand_total %}bag-contents{% else %}bag-empty{% endif %}">
