--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -80,45 +80,55 @@
                 </div>
             {% endif %}
 
-            <!-- Quantity Input -->
-            <div class="product-page-quantity my-4">
-                <p class="mt-3 mb-1 weight-semibold">Quantity</p>
-                <div class="form-group w-50">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <button class="decrement-qty bg-blue text-ib-light weight-bold btn rounded-0" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                        </div>
-                        <input class="form-control qty_input ib-form-field" type="number"
-                            name="quantity"
-                            value="1"
-                            min="1"
-                            max="99"
-                            data-item_id="{{ product.id }}"
-                            id="id_qty_{{ product.id }}">
-                        <div class="input-group-append">
-                            <button class="increment-qty bg-blue text-ib-light weight-bold btn rounded-0"
-                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                <i class="fas fa-plus"></i>
-                            </button>
+            <!-- Add item to bag form -->
+            <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                {% csrf_token %}
+
+                <!-- Quantity Input -->
+                <div class="product-page-quantity my-4">
+                    <p class="mt-3 mb-1 weight-semibold">Quantity</p>
+                    <div class="form-group w-50">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <button class="decrement-qty bg-blue text-ib-light weight-bold btn rounded-0" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                            </div>
+                            <input class="form-control qty_input ib-form-field font-body weight-semibold" type="number"
+                                name="quantity"
+                                value="1"
+                                min="1"
+                                max="99"
+                                data-item_id="{{ product.id }}"
+                                id="id_qty_{{ product.id }}">
+                            <div class="input-group-append">
+                                <button class="increment-qty bg-blue text-ib-light weight-bold btn rounded-0"
+                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                    <i class="fas fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <!-- Product Detail Page Buttons -->
-            <div class="product-page-buttons my-4 pt-2 pt-md-4">
-                <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
-                    <i class="fas fa-chevron-left d-inline me-1"></i>
-                    <p class="d-inline">KEEP SHOPPING</p>
-                </a>
+                <div class="product-page-buttons my-4 pt-2 pt-md-4 d-flex">
 
-                <a href="{% url 'products' %}" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm">
-                    ADD TO BAG
-                </a>
+                    <!-- Keep Shopping Button -->
+                    <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
+                        <i class="fas fa-chevron-left d-inline me-1"></i>
+                        <p class="d-inline">KEEP SHOPPING</p>
+                    </a>
 
-            </div>
+                    <!-- Add to Bag (Submit) Button -->
+                    <input type="submit" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm" value="ADD TO BAG">
+                </div>
+
+                <!-- Hidden input to redirect user back to current page once added to bag -->
+                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+
+
+            </form>
+            
 
         </div>
     </div>
