feat: bag responsive styling for mobile

--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,4 +1,4 @@
-<div class="bag-buttons my-3 d-flex justify-content-end">
+<div class="button-group my-3 d-flex justify-content-start justify-content-sm-end">
 
     <!-- Keep Shopping Button -->
     <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
