--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
 
-                <div class="product-page-buttons my-4 pt-2 pt-md-4 d-flex">
+                <div class="button-group my-4 pt-2 pt-md-4 d-flex">
 
                     <!-- Keep Shopping Button -->
                     <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
